--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,17 @@
   "compilerOptions": {
     "target": "es6",
     "jsx": "react"
-  }
+  },
+  "allowJs": true,
+  "skipLibCheck": true,
+  "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true,
+  "strict": true,
+  "forceConsistentCasingInFileNames": true,
+  "module": "esnext",
+  "moduleResolution": "node",
+  "resolveJsonModule": true,
+  "isolatedModules": true,
+  "noEmit": true,
+  "jsx": "preserve"
 }
